--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/public/hand-up-leaf-logo-design-with-vector_1249511-1344.jpg"
+      href="/public/cropped_circle_image.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GreenEco</title>
+    <title>GreenEco Landing page Ashen</title>
   </head>
   <body>
     <div id="root"></div>
